--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -15,4 +15,7 @@
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
+    <style name="DialogTheme" parent="@style/Base.Theme.AppCompat.Light.Dialog">
+     <item name="android:windowTranslucentStatus">true</item>
+</style>
 </resources>
